// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowLogDetails should render 1`] = `
<DocumentFragment>
  <div
    class="css-ayshjd"
  >
    <div
      class="chakra-tabs css-1xpribl"
    >
      <div
        aria-orientation="horizontal"
        class="chakra-tabs__tablist css-8fgait"
        role="tablist"
      >
        <button
          aria-controls="tabs-_r_0_--tabpanel-0"
          aria-disabled="false"
          aria-selected="true"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="0"
          data-testid="tabs-tab"
          id="tabs-_r_0_--tab-0"
          role="tab"
          tabindex="0"
          type="button"
        >
          Table
        </button>
        <button
          aria-controls="tabs-_r_0_--tabpanel-1"
          aria-disabled="false"
          aria-selected="false"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="1"
          data-testid="tabs-tab"
          id="tabs-_r_0_--tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          JSON
        </button>
      </div>
      <div
        class="chakra-tabs__tab-panels css-8atqhb"
      >
        <div
          aria-labelledby="tabs-_r_0_--tab-0"
          class="chakra-tabs__tab-panel css-cbbbo5"
          data-testid="tabs-tab-panel"
          id="tabs-_r_0_--tabpanel-0"
          role="tabpanel"
          tabindex="0"
        >
          <table
            class="chakra-table css-60vzui"
          >
            <tbody
              class="css-0"
            >
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  start_time
                </th>
                <td
                  class="css-9lo4gq"
                >
                  1698940029
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  end_time
                </th>
                <td
                  class="css-9lo4gq"
                >
                  1698940352
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_ip
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_namespace
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_name_aggr
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "prometheus-calico-node-prometheus-*"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_name
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "tigera-prometheus"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  nat_outgoing_ports
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_port
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_type
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_labels
                </th>
                <td
                  class="css-9lo4gq"
                >
                  {"labels":["app.kubernetes.io/managed-by=prometheus-operator","app.kubernetes.io/version=2.45.0","app.kubernetes.io/instance=calico-node-prometheus","app.kubernetes.io/name=prometheus","statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0","prometheus=calico-node-prometheus","controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65","operator.prometheus.io/shard=0","operator.prometheus.io/name=calico-node-prometheus"]}
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_ip
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_namespace
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_name_aggr
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "fluentd-node-*"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_name
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "tigera-fluentd"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_port
                </th>
                <td
                  class="css-9lo4gq"
                >
                  9081
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_type
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_labels
                </th>
                <td
                  class="css-9lo4gq"
                >
                  {"labels":["app.kubernetes.io/name=fluentd-node","controller-revision-hash=7c887f95cb","k8s-app=fluentd-node","pod-template-generation=1"]}
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_namespace
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_name
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_port
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_port_num
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_domains
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-labelledby="tabs-_r_0_--tab-1"
          class="chakra-tabs__tab-panel css-cbbbo5"
          data-testid="tabs-tab-panel"
          hidden=""
          id="tabs-_r_0_--tabpanel-1"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="containerStylesDark"
          >
            <div
              class="_2bkNM"
              role="list"
            >
              <span
                aria-controls=":jsnvw:1:"
                aria-expanded="true"
                aria-label="collapse JSON"
                class="_3QHg2 _f10Tu _1MFti _1LId0"
                role="button"
                tabindex="0"
              />
              <span
                class="_gsbQL _3eOF8"
              >
                {
              </span>
              <div
                id=":jsnvw:1:"
              >
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    start_time:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    1698940029
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    end_time:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    1698940352
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_ip:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_namespace:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_name_aggr:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "prometheus-calico-node-prometheus-*"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_name:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "tigera-prometheus"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    nat_outgoing_ports:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_port:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_type:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "wep"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:2:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_3QHg2 _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStylesDark"
                  >
                    source_labels:
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:2:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:3:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_3QHg2 _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStylesDark"
                      >
                        labels:
                      </span>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:3:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/managed-by=prometheus-operator"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/version=2.45.0"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/instance=calico-node-prometheus"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/name=prometheus"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "prometheus=calico-node-prometheus"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "operator.prometheus.io/shard=0"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "operator.prometheus.io/name=calico-node-prometheus"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_ip:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_namespace:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_name_aggr:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "fluentd-node-*"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_name:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "tigera-fluentd"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_port:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    9081
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_type:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "wep"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:4:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_3QHg2 _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStylesDark"
                  >
                    dest_labels:
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:4:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:5:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_3QHg2 _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStylesDark"
                      >
                        labels:
                      </span>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:5:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/name=fluentd-node"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "controller-revision-hash=7c887f95cb"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "k8s-app=fluentd-node"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "pod-template-generation=1"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_namespace:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_name:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_port:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_port_num:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_domains:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                </div>
              </div>
              <span
                class="_gsbQL _3eOF8"
              >
                }
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`FlowLogDetails should render json 1`] = `
<DocumentFragment>
  <div
    class="css-ayshjd"
  >
    <div
      class="chakra-tabs css-1xpribl"
    >
      <div
        aria-orientation="horizontal"
        class="chakra-tabs__tablist css-8fgait"
        role="tablist"
      >
        <button
          aria-controls="tabs-_r_1_--tabpanel-0"
          aria-disabled="false"
          aria-selected="false"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="0"
          data-testid="tabs-tab"
          id="tabs-_r_1_--tab-0"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Table
        </button>
        <button
          aria-controls="tabs-_r_1_--tabpanel-1"
          aria-disabled="false"
          aria-selected="true"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="1"
          data-testid="tabs-tab"
          id="tabs-_r_1_--tab-1"
          role="tab"
          tabindex="0"
          type="button"
        >
          JSON
        </button>
      </div>
      <div
        class="chakra-tabs__tab-panels css-8atqhb"
      >
        <div
          aria-labelledby="tabs-_r_1_--tab-0"
          class="chakra-tabs__tab-panel css-cbbbo5"
          data-testid="tabs-tab-panel"
          hidden=""
          id="tabs-_r_1_--tabpanel-0"
          role="tabpanel"
          tabindex="0"
        >
          <table
            class="chakra-table css-60vzui"
          >
            <tbody
              class="css-0"
            >
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  start_time
                </th>
                <td
                  class="css-9lo4gq"
                >
                  1698940029
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  end_time
                </th>
                <td
                  class="css-9lo4gq"
                >
                  1698940352
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_ip
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_namespace
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_name_aggr
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "prometheus-calico-node-prometheus-*"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_name
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "tigera-prometheus"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  nat_outgoing_ports
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_port
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_type
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  source_labels
                </th>
                <td
                  class="css-9lo4gq"
                >
                  {"labels":["app.kubernetes.io/managed-by=prometheus-operator","app.kubernetes.io/version=2.45.0","app.kubernetes.io/instance=calico-node-prometheus","app.kubernetes.io/name=prometheus","statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0","prometheus=calico-node-prometheus","controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65","operator.prometheus.io/shard=0","operator.prometheus.io/name=calico-node-prometheus"]}
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_ip
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_namespace
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_name_aggr
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "fluentd-node-*"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_name
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "tigera-fluentd"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_port
                </th>
                <td
                  class="css-9lo4gq"
                >
                  9081
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_type
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_labels
                </th>
                <td
                  class="css-9lo4gq"
                >
                  {"labels":["app.kubernetes.io/name=fluentd-node","controller-revision-hash=7c887f95cb","k8s-app=fluentd-node","pod-template-generation=1"]}
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_namespace
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_name
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_port
                </th>
                <td
                  class="css-9lo4gq"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_service_port_num
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-x2z78s"
              >
                <th
                  class="css-hqr8ld"
                >
                  dest_domains
                </th>
                <td
                  class="css-9lo4gq"
                >
                  null
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-labelledby="tabs-_r_1_--tab-1"
          class="chakra-tabs__tab-panel css-cbbbo5"
          data-testid="tabs-tab-panel"
          id="tabs-_r_1_--tabpanel-1"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="containerStylesDark"
          >
            <div
              class="_2bkNM"
              role="list"
            >
              <span
                aria-controls=":jsnvw:6:"
                aria-expanded="true"
                aria-label="collapse JSON"
                class="_3QHg2 _f10Tu _1MFti _1LId0"
                role="button"
                tabindex="0"
              />
              <span
                class="_gsbQL _3eOF8"
              >
                {
              </span>
              <div
                id=":jsnvw:6:"
              >
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    start_time:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    1698940029
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    end_time:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    1698940352
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_ip:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_namespace:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_name_aggr:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "prometheus-calico-node-prometheus-*"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_name:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "tigera-prometheus"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    nat_outgoing_ports:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_port:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    source_type:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "wep"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:7:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_3QHg2 _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStylesDark"
                  >
                    source_labels:
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:7:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:8:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_3QHg2 _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStylesDark"
                      >
                        labels:
                      </span>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:8:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/managed-by=prometheus-operator"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/version=2.45.0"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/instance=calico-node-prometheus"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/name=prometheus"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "prometheus=calico-node-prometheus"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "operator.prometheus.io/shard=0"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "operator.prometheus.io/name=calico-node-prometheus"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_ip:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_namespace:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_name_aggr:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "fluentd-node-*"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_name:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "tigera-fluentd"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_port:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    9081
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_type:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "wep"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:9:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_3QHg2 _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStylesDark"
                  >
                    dest_labels:
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:9:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:10:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_3QHg2 _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStylesDark"
                      >
                        labels:
                      </span>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:10:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "app.kubernetes.io/name=fluentd-node"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "controller-revision-hash=7c887f95cb"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "k8s-app=fluentd-node"
                          </span>
                          <span
                            class="_gsbQL _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStylesDark"
                          >
                            "pod-template-generation=1"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_gsbQL _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_namespace:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_name:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_port:
                  </span>
                  <span
                    class="stringStylesDark"
                  >
                    "-"
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_service_port_num:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                  <span
                    class="_gsbQL _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStylesDark"
                  >
                    dest_domains:
                  </span>
                  <span
                    class="valueStylesDark"
                  >
                    null
                  </span>
                </div>
              </div>
              <span
                class="_gsbQL _3eOF8"
              >
                }
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
